# test_opencl_dev_query_vector_addtion_intel_nvidia_cpu-x-1_gpu-x-2

./: CMakeLists.txt  README.md  dev_query.cpp  vec_add.cpp
